Update index.html - Cambié todo lo que era Factor IT por InAdvance
Cambié todo lo que era Factor IT por InAdvance

--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
                     </div>
                     <h3>Transformación Y Desarrollo Digital</h3>
                     <p>
-                        En Factor IT impulsamos la transformación digital de tu empresa para 
+                        En InAdvance impulsamos la transformación digital de tu empresa para 
                         optimizar y modernizar todos tus procesos con las más avanzadas soluciones.
                     </p>
                     <a href="#" class="btn btn-secondary mt-3">Ver Más</a>
